# proteosim

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
proteosim/: __init__.py  file_handling.py  liquid_chromatography.py  mass_spectra_simulation.py  protein_digestion.py  simulate_mass_spectra.py
tests/: test_file_handling.py  test_liquid_chromatography.py  test_mass_spectra_simulation.py  test_protein_digestion.py  test_simulate_mass_spectra.py
tests/data/: test_proteins.fasta
tutorials/: ms_simulation.ipynb
